# polish-salary-calc

./: README.md  Rates.py  Salary.py  main.py  pyproject.toml
contracts/: employment_contract.py
opions/: employment_contract_options.py
rates/: rates.py
salary/: abstract_salary.py
