[tool.poetry]
name = "polish-salary-calc"
version = "0.1.0"
description = "Polish salary calculator"
authors = ["Jarosław Jezierczak"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
